--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "memory": "cpp",
         "algorithm": "cpp",
         "math.h": "c",
-        "libgcf.h": "c"
+        "libgcf.h": "c",
+        "stdlib.h": "c"
     }
 }
