--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,8 @@
         "algorithm": "cpp",
         "math.h": "c",
         "libgcf.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "wait.h": "c",
+        "time.h": "c"
     }
 }
